syntax = "proto3";

option csharp_namespace = "JwtAuthenticationApp";

package ConfirmUser;

service UserConfirmator {
	rpc Work (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
	string login = 1;
	string password = 2;
}

message LoginResponse {
	bool isValid = 1;
	string id = 2;
	string login = 3;
	repeated string roles = 4;
}
